[package]
name = "games"
version = "0.1.0"
authors = ["Juan Rodriguez <sjdonado.de>"]
edition = "2021"

[lib]
path = "logic/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
gloo-utils = { version = "0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
